--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,7 +1,22 @@
 body {
   font-family: helvetica;
 }
-img {
+
+header {
+  text-align: center;
+}
+
+header img {
+  vertical-align: middle;
+  width: 150px;
+  display: inline-block;
+}
+header h1 {
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.contact-panel img {
   object-fit: cover;
   width: 100px;
   height: 100px;
